# ffmpeg-tutorial

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/ffmpeg-5.1.2/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
